# analyzeAudio

./: .gitignore  CITATION.cff  README.md  context7.json  pyproject.toml  ruff.toml  setup.cfg  test.py  testFFprobeSeparators.cmd
.github/: copilot-instructions.md
.github/workflows/: pythonTests.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/conventions/: code_generation.md  diagnostics.md  docstrings.md  formatting.md  identifiers.md  syntactic_clarity.md  tests.md  types.md
.serena/memories/docstrings/: filename-analyzers.md
.serena/memories/repo/: docstring-patterns.md
analyzeAudio/: __init__.py  _beDRY.py  _dataBaskets.py  _misfit.py  _theSSOT.py  _theTypes.py  analyze.py  analyzeAudio.py  analyzersUseFilename.py  analyzersUseSpectrogram.py  analyzersUseTensor.py  analyzersUseTensorSpectrogram.py  analyzersUseWaveform.py  audioAspectsFilename.py  audioAspectsRegistry.py  audioAspectsSpectrogram.py  audioAspectsWaveform.py  contestsFilename.py  contestsSpectrogram.py  contestsTensor.py  contestsTensorSpectrogram.py  ffmpeg.py  pythonator.py  registry.py
analyzeAudio/analyzersUseFilename/: __init__.py  _aspectralstats.py  _astats.py  _contests.py  _ebur128.py  _pythonator.py  _wideRange.py
analyzeAudio/analyzersUseFilename/notesPythonator/: ffmpegDocs.txt  packets.txt  packets_frames.txt  testFFprobeSeparators.cmd
citations/: CITATION.cff  arik2018fastspectrogram.bib  backstrom2026zerocrossingrate.bib  chen2019logcosh.bib  constantinescu2023overview.bib  ebu2023tech3341.bib  ebu2023tech3342.bib  engel2020ddsp.bib  falk2010srmr.bib  fujishima1999realtime.bib  gray1974spectralflatness.bib  grey1978perceptual.bib  grosche2010cyclic.bib  hiary2016blind.bib  itu2023bs1770.bib  jiang2002spectralcontrast.bib  jordal2026logwmse.bib  landschoot2026torchlogwmse.bib  lee2006automaticchord.bib  leroux2019sdr.bib  lu2001robust.bib  muller2011signal.bib  panagiotakis2005speechmusic.bib  peeters2011timbre.bib  shen1998entropy.bib  steinmetz2020auraloss.bib  steinmetz2020auralosssoftware.bib  steinmetz2020multitrackmixing.bib  vincent2006performance.bib  wang2019neuralsourcefilter.bib  watcharasupat2024generalizedbandsplit.bib  watcharasupat2024stemagnostic.bib  watcharasupat2025hyperellipsoidal.bib  wright2019perceptualloss.bib  yamamoto2019parallelwavegan.bib  yamamoto2019pdd.bib
notesPythonator/: ffprobeSections.txt  frames.txt  library_versions.txt
tests/: __init__.py  _dataBaskets.py  _theSSOT.py  _theTypes.py  conftest.py  conftestAnnex.py  ruff.toml  test_analyzersUseFilename.py  test_analyzersUseSpectrogram.py  test_analyzersUseTensor.py  test_analyzersUseTensorSpectrogram.py  test_analyzersUseWaveform.py  test_bs.py  test_contestsFilename.py  test_contestsSpectrogram.py  test_contestsTensor.py  test_contestsTensorSpectrogram.py  test_import.py  test_other.py
tests/dataSamples/: expected.py
tests/dataSamples/SpeakSoftly_BrokenMan60sec/: comparand_bass_bad_Hz44100.flac  comparand_bass_good_Hz44100.flac  comparand_drums_bad_Hz44100.flac  comparand_drums_good_Hz44100.flac  comparand_other_bad_Hz44100.flac  comparand_other_good_Hz44100.flac  comparand_vocals_bad_Hz44100.flac  comparand_vocals_good_Hz44100.flac  expected.py  msstMetrics.py  reference_bass_Hz44100.flac  reference_drums_Hz44100.flac  reference_mixture_Hz44100.flac  reference_other_Hz44100.flac  reference_vocals_Hz44100.flac
unittests/: test_audioAspectsRegistry.py
