[project]
name = "analyzeAudio"
version = "0.5.0"
description = "Measure one or more aspects of one or more audio files."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
keywords = [
  "FFmpeg",
  "FFprobe",
  "LUFS",
  "RMS",
  "SRMR",
  "analysis",
  "audio",
  "audio-analysis",
  "loudness",
  "measurement",
  "metrics",
  "signal-processing",
  "spectral",
  "spectrum",
  "torch",
  "waveform",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "auraloss",
  "hunterHearsPy>=1.0.3",
  "hunterMakesPy>=0.7.0",
  "librosa",
  "numpy",
  "scipy",
  "torch",
  "torch_l1_snr",
  "torch_log_wmse",
  "torchmetrics[audio]",
  "tqdm"
]
optional-dependencies = { development = ["pytest-cov", "scipy-stubs"], testing = [
  "pytest", "pytest-xdist"
] }

[project.urls]
Context7 = "https://context7.com/hunterhogan/analyzeaudio"
Donate = "https://www.patreon.com/integrated"
Download = "https://pypi.org/project/analyzeAudio"
Homepage = "https://github.com/hunterhogan/analyzeAudio"
Issues = "https://github.com/hunterhogan/analyzeAudio/issues"
Repository = "https://github.com/hunterhogan/analyzeAudio.git"

[project.scripts]
whatAspects = "analyzeAudio:getListAvailableAudioAspects"
whatContests = "analyzeAudio:getListAvailableAudioContests"
whatMeasurements = "analyzeAudio:getListAvailableAudioAspects"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage]
report = { exclude_lines = ["if TYPE_CHECKING:", "if __name__ == \"__main__\":"], ignore_errors = false }
run = { branch = true, data_file = "tests/coverage/.coverage", omit = [
  "tests/*"
], parallel = true, source = ["."] }

[tool.pytest]
addopts = ["--color=auto", "-n 1"]
log_auto_indent = "On"
testpaths = ["tests"]

[tool.setuptools]
package-data = { "*" = ["py.typed"] }
packages = { find = {} }

[tool.updateCitation]
filenameCitationDOTcff = "CITATION.cff"
pathFilenameCitationSSOT = "citations/CITATION.cff"
