[metadata]
name = analyzeAudio
version = 0.0.7
description = audio analysis tools 
author = Hunter Hogan
url = https://github.com/hunterhogan/analyzeAudio.git

[options]
packages = find:
include_package_data = True

install_requires = 
    cachetools
    librosa
    numpy
    torch
    torchmetrics[audio]
    tqdm
    Z0Z_tools@git+https://github.com/hunterhogan/Z0Z_tools.git

[options.packages.find]
where = .
